<resources>
    <string name="app_name">BuzzFeed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="professional_tools">Professional Tools</string>
    <string name="setting_support"><![CDATA[Setting & Support]]></string>
    <string name="_18_following">18 Following</string>
    <string name="_18_followers">18  Followers</string>
    <string name="twitter_circle">Twitter Circle</string>
    <string name="lists">Lists</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="topics">Topics</string>
    <string name="twitter_blue">Twitter Blue</string>
    <string name="profile">Profile</string>
    <string name="mode">mode</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="name_gmail_com">name@gmail.com</string>
    <string name="tweet">Tweet</string>
    <string name="like">Like</string>
    <string name="add">Add</string>
</resources>