<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/itemcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8sp"
        android:layout_marginTop="5dp"

        app:cardCornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/cardLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:paddingVertical="8sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@color/transparent"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/transparent"
                    android:layout_weight="1"
                    android:cropToPadding="false"
                    android:src="@drawable/profile"
                    app:civ_border_width="0.8sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/uname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/name"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/name_gmail_com"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tweet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5sp"
                android:background="@color/transparent"
                android:padding="5sp"
                android:text="@string/tweet"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@color/transparent"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <ImageButton
                        android:layout_width="20sp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        android:backgroundTint="@color/transparent"
                        android:src="@drawable/outline_mode_comment_24" />

                    <TextView
                        android:id="@+id/comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:text="@string/like" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/likebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15sp"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/ib_like"
                        android:tag="unfill"
                        android:layout_width="20sp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/like"
                        android:backgroundTint="@color/transparent"
                        android:src="@drawable/heart" />

                    <TextView
                        android:id="@+id/like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:text="@string/like" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sharebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15sp"
                    android:clickable="true"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:focusable="true">


                    <ImageButton
                        android:layout_width="20sp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        android:backgroundTint="@color/transparent"
                        android:src="@drawable/baseline_ios_share_24" />

                    <TextView
                        android:id="@+id/share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:text="@string/like" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>